# AtlasGeo

./: .env.example  .gitignore  CONTRIBUTING.md  Dockerfile.backend  Makefile  README.md  ROADMAP.md  docker-compose.yml  environment.yml  pyproject.toml
.github/workflows/: ci.yml
config/: models.yaml
frontend/: index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/public/docs/: index.html
frontend/src/: App.tsx  index.css  vite-env.d.ts
frontend/src/api/: atlas.ts
frontend/src/components/: ChatPanel.tsx  Globe.tsx  LayerPanel.tsx  SceneDrawer.tsx
frontend/src/types/: index.ts
src/atlas/: __init__.py  config.py  graph.py  main.py  state.py
src/atlas/agents/: __init__.py  burn_scar.py  flood_mapping.py  planner.py  response.py  spectral_index.py  stac_scout.py
src/atlas/models/: __init__.py  router.py
src/atlas/tools/: __init__.py  loader.py  registry.py
tests/: test_planner.py  test_router.py  test_stac_scout.py
tools/burn_scar/: tool.py
tools/flood_mapping/: tool.py
tools/get_cog_url/: tool.py
tools/spectral_index/: tool.py
tools/stac_search/: tool.py
