[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "atlas-geoai"
version = "0.1.0"
description = "Natural Language GIS Engine — chat with satellite data"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    # Core
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "websockets>=13",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "python-dotenv>=1.0",
    # Agents
    "langchain>=0.3",
    "langgraph>=0.2",
    "langchain-community>=0.3",
    "langchain-openai>=0.2",
    "langchain-anthropic>=0.2",
    # STAC / Geospatial
    "pystac-client>=0.8",
    "pystac>=1.10",
    # Utils
    "httpx>=0.27",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
l2 = [
    # Unlock for Level 2
    "rioxarray>=0.17",
    "rasterio>=1.4",
    "stackstac>=0.5",
    "odc-stac>=0.3",
    "xarray>=2024.1",
    "dask[complete]>=2024.1",
    "titiler-core>=0.18",
]
google = [
    "langchain-google-genai>=2.0",
]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
    "ruff>=0.7",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests", "tools"]
